# demo-python-fastapi-uvicorn

./: README.md  pyproject.toml  vercel.json
